--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ nav a {
 
 section {
     background-color: #282828;
-    padding: 5px 20px;
-    margin: 10% 20%;
+    padding: 1% 2%;
+    margin: 5% 10%;
     border-radius: 10px;
-    /* font-size: 30px; */
 }
